--- a/index.html
+++ b/index.html
@@ -1,1 +1,415 @@
-abdc
+<!doctype html>
+<html lang="en">
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="icon" href="img/favicon.png" type="image/png">
+        <title>THE PHOTOGRAPHY CLUB</title>
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="vendors/linericon/style.css">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
+        <link rel="stylesheet" href="vendors/lightbox/simpleLightbox.css">
+        <link rel="stylesheet" href="vendors/nice-select/css/nice-select.css">
+        <link rel="stylesheet" href="vendors/animate-css/animate.css">
+        <link rel="stylesheet" href="vendors/popup/magnific-popup.css">
+        <!-- main css -->
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/responsive.css">
+    </head>
+    <body>
+
+        <!--================Header Menu Area =================-->
+        <header class="header_area">
+            <div class="main_menu">
+            	<nav class="navbar navbar-expand-lg navbar-light">
+					<div class="container">
+						<!-- Brand and toggle get grouped for better mobile display -->
+						<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<!-- Collect the nav links, forms, and other content for toggling -->
+						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+							<ul class="nav navbar-nav menu_nav ml-auto">
+								<li class="nav-item active"><a class="nav-link" href="index.html?#home">Home</a></li>
+								<li class="nav-item"><a class="nav-link" href="index.html?#services">Services</a></li>
+								<li class="nav-item"><a class="nav-link" href="index.html?#values">Values</a></li>
+								<li class="nav-item"><a class="nav-link" href="index.html?#process">Process</a></li>
+								<li class="nav-item"><a class="nav-link" href="index.html?#contact">Contact Us</a></li>
+
+							</ul>
+						</div>
+					</div>
+            	</nav>
+            </div>
+        </header>
+        <!--================Header Menu Area =================-->
+
+        <!--================Home Banner Area =================-->
+        <section class="home_banner_area" id="home">
+           	<div class="box_1620">
+           		<div class="banner_inner d-flex align-items-center">
+					<div class="container">
+						<div class="banner_content text-center">
+							<h4 style="font-size: 50px;">“Don’t shoot what it looks like.<br /> Shoot what it feels like.”</h4>
+							<p>― David Alan Harvey -</p>
+							<!-- <a class="main_btn" href="#">Explore Gallery</a> -->
+						</div>
+					</div>
+				</div>
+            </div>
+        </section>
+        <!--================End Home Banner Area =================-->
+
+        <!--================Home Blog Area =================-->
+        <section class="home_blog_area pad_top">
+        	<div class="container">
+        		<div class="home_blog_inner">
+        			<div class="row h_blog_item">
+        				<div class="col-lg-6">
+							<div class="h_blog_img">
+								<img class="img-fluid" src="img/home-blog/h-blog-1.jpg" alt="">
+							</div>
+						</div>
+						<div class="col-lg-6">
+							<div class="h_blog_text">
+								<div class="h_blog_text_inner left">
+									<h4>Capturing	the	Best <br />Feelings	of Life</h4>
+									<p>We	capture	the	most precious moments	of your life and make you	relive	the	feeling</p>
+								</div>
+							</div>
+						</div>
+        			</div>
+        			<div class="row h_blog_item">
+						<div class="col-lg-6">
+							<div class="h_blog_text">
+								<div class="h_blog_text_inner right">
+									<h4>Capturing <br />the	Best	of	Entertainment</h4>
+									<p>We	use	high	tech	cameras	to	capture	every	frame	of	the	event	and	make	the	audience	live	the	moment</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6">
+							<div class="h_blog_img">
+								<img class="img-fluid" src="img/home-blog/h-blog-2.jpg" alt="">
+							</div>
+						</div>
+        			</div>
+
+        		</div>
+        	</div>
+        </section>
+        <!--================End Home Blog Area =================-->
+
+        <!--================Service Area =================-->
+        <section class="service_area p_120" id="services">
+        	<div class="container box_1620">
+        		<div class="main_title">
+        			<h2>Services Offered by Us</h2>
+        			<p></p>
+        		</div>
+        		<div class="row m0 service_inner">
+              <div class="col-lg-3 col-md-6 p0">
+        				<div class="service_img">
+        					<img class="img-fluid" src="img/service/service-1.jpg" alt="">
+        				</div>
+        			</div>
+        			<div class="col-lg-3 col-md-6 p0">
+        				<div class="service_text">
+        					<h4>Wedding <br />Photography</h4>
+        					<p>We capture the most precious moments of your life and make you relive the feeling</p>
+        				</div>
+        			</div>
+        			<div class="col-lg-3 col-md-6 p0">
+        				<div class="service_img">
+        					<img class="img-fluid" src="img/service/service-2.jpg" alt="">
+        				</div>
+        			</div>
+        			<div class="col-lg-3 col-md-6 p0">
+        				<div class="service_text">
+        					<h4>New	Born Baby<br />Photography</h4>
+        					<p>We know what it is to feel the first touch of your baby. We capture your feelings not just moments</p>
+        				</div>
+        			</div>
+        			<div class="col-lg-3 col-md-6 p0">
+        				<div class="service_text">
+        					<h4>Birthday/Anniversary <br />Photography</h4>
+        					<p>Capture	every	year	of	your	baby	or	journey	 of	your	married	life	and	relive	the	moments	 and	feelings	years	after</p>
+        				</div>
+        			</div>
+        			<div class="col-lg-3 col-md-6 p0">
+        				<div class="service_img">
+        					<img class="img-fluid" src="img/service/service-3.jpg" alt="">
+        				</div>
+        			</div>
+        			<div class="col-lg-3 col-md-6 p0">
+        				<div class="service_text">
+        					<h4>Sports Event<br />Coverage</h4>
+        					<p>We	use	high	tech	cameras	to	capture	every	frame	of	the	event	and	make	the	audience	live	the	moment</p>
+        				</div>
+        			</div>
+        			<div class="col-lg-3 col-md-6 p0">
+        				<div class="service_img">
+        					<img class="img-fluid" src="img/service/service-4.jpg" alt="">
+        				</div>
+        			</div>
+              <div class="col-lg-3 col-md-6 p0">
+        				<div class="service_img">
+        					<img class="img-fluid" src="img/service/service-5.jpg" alt="">
+        				</div>
+        			</div>
+        			<div class="col-lg-3 col-md-6 p0">
+        				<div class="service_text">
+        					<h4>Corporate	Event<br />Coverage</h4>
+        					<p>Impressing	your	clients	and	customers	by capturing	the	best from your corporate	events</p>
+        				</div>
+        			</div>
+        			<div class="col-lg-3 col-md-6 p0">
+        				<div class="service_img">
+        					<img class="img-fluid" src="img/service/service-6.jpg" alt="">
+        				</div>
+        			</div>
+        			<div class="col-lg-3 col-md-6 p0">
+        				<div class="service_text">
+        					<h4>Concert/	Stage	<br />events</h4>
+        					<p>We use high tech cameras to capture every angel and corner of the event to give you the same feel</p>
+        				</div>
+        			</div>
+        			<div class="col-lg-3 col-md-6 p0">
+        				<div class="service_text">
+        					<h4>Fashion <br />Photoshoot</h4>
+        					<p>Taking your business to the next level with the best photography experience. Showing what your customers love</p>
+        				</div>
+        			</div>
+        			<div class="col-lg-3 col-md-6 p0">
+        				<div class="service_img">
+        					<img class="img-fluid" src="img/service/service-7.jpg" alt="">
+        				</div>
+        			</div>
+        			<div class="col-lg-3 col-md-6 p0">
+        				<div class="service_text">
+        					<h4>Product<br />Photoshoot</h4>
+        					<p>Take your product direct to your customer’s heart by capturing the best of the product</p>
+        				</div>
+        			</div>
+        			<div class="col-lg-3 col-md-6 p0">
+        				<div class="service_img">
+        					<img class="img-fluid" src="img/service/service-8.jpg" alt="">
+        				</div>
+        			</div>
+        		</div>
+        	</div>
+        </section>
+        <!--================End Service Area =================-->
+
+        <!--================Service Area =================-->
+        <section class="service_area p_120" id="values">
+        	<div class="container box_1620" style="text-align:center;">
+        		<div class="main_title">
+        			<h2>Our Core Values</h2>
+        			<p></p>
+        		</div>
+        		<div class="row m0 service_inner">
+              <div class="col-lg-3 col-md-6 p0">
+        				<div class="service_text">
+                  <img src="img/core-1.png" />
+        					<h4>QUALITY</h4>
+        				</div>
+        			</div>
+        			<div class="col-lg-3 col-md-6 p0">
+        				<div class="service_text">
+                    <img src="img/core-2.png" />
+        					<h4>RELIABILITY</h4>
+        				</div>
+        			</div>
+        			<div class="col-lg-3 col-md-6 p0">
+        				<div class="service_text">
+                    <img src="img/core-3.png" />
+        					<h4>AVAILABILITY</h4>
+        				</div>
+        			</div>
+        			<div class="col-lg-3 col-md-6 p0">
+        				<div class="service_text">
+                    <img src="img/core-4.png" />
+        					<h4>COMMITMENT</h4>
+        				</div>
+        			</div>
+        		</div>
+        	</div>
+        </section>
+        <!--================End Service Area =================-->
+
+        <!--================Feedback Area =================-->
+        <section class="feedback_area pad_bt" id="process">
+        	<div class="container">
+        		<div class="feedback_inner p_100">
+        			<div class="row">
+        				<div class="col-lg-12">
+        					<div class="feedback_text">
+                    <h3>OUR	PROCESS</h3>
+        						<p>HOW DO WE DO IT SO PERFECT?</p>
+                      <div class="col-lg-12" >
+                          <div class="media-body col-md-12">
+                            <h4>PREPARE</h4>
+                            <p>Event specialist will be assigned to collect all the details and particulars about the event. Client requirement checklist will be prepared at this stage.</p>
+                          </div>
+                          <div class="media-body  col-md-12">
+                            <h4>ASSIGN</h4>
+                            <p>Our event specialist will prepare the technical requirement, budget and other planning. According to the requirement Photographer/s will be assigned</p>
+                          </div>
+                          <div class="media-body  col-md-12">
+                            <h4>PERFORM</h4>
+                            <p>Specialist will provide checklist to the team. Assigned team will complete the project as per the requirement and will ensure the checklist criteria's are met</p>
+                          </div>
+                          <div class="media-body  col-md-12">
+                            <h4>CLOSE</h4>
+                            <p>Our editing and mixing team will collect the raw data. Project will be edited and finished as per requirement. Finished project files will be made available on our platform to clients</p>
+                          </div>
+                      </div>
+        					</div>
+
+        				</div>
+        			</div>
+        		</div>
+        	</div>
+        </section>
+        <!--================End Feedback Area =================-->
+
+
+        <!--================Service Area =================-->
+        <section class="service_area p_120">
+          <div class="container box_1620" style="text-align:center;">
+            <div class="main_title">
+              <h2>Value Addition to Customers</h2>
+              <p></p>
+            </div>
+            <div class="row m0 ">
+              <div class="col-lg-12 col-md-12 p0">
+                <div class="service_text">
+                  <img src="img/Value.png"  class="img-responsive" style="width: 70%"/>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!--================End Service Area =================-->
+
+        <!--================Feedback Area =================-->
+        <section class="feedback_area pad_bt" id="affiliation">
+          <div class="container">
+            <div class="feedback_inner p_100">
+              <div class="row">
+                <div class="col-lg-5">
+                  <div class="feedback_text">
+                    <h3>OUR	AFFILIATION - CERTIFICATION</h3>
+                  </div>
+                </div>
+                <div class="col-lg-7">
+              <div class="testi_slider_inner">
+                <div class="testi_slider owl-carousel">
+                  <div class="item">
+                    <div class="media">
+                      <div class="d-flex">
+                        <img src="img/testimonials/testi-1.jpg" alt="">
+                      </div>
+                      <div class="media-body">
+                        <h4> || All Photographers are certified through ACE INTERNATIONAL PTE LTD, Singapore</h4>
+                        <h4> || High Quality, Trained Professionals</h4>
+                        <h4> || CHECKLIST maintained for every project to ensure all customer requirements are met</h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!--================End Feedback Area =================-->
+
+        <!--================Service Area =================-->
+        <section class="service_area p_120">
+          <div class="container box_1620" style="text-align:center;">
+            <div class="main_title">
+              <h2>OUR	GLOBAL PRESENCE</h2>
+              <p></p>
+            </div>
+            <div class="row m0 ">
+              <div class="col-lg-12 col-md-12 p0">
+                <div class="service_text">
+                  <img src="img/global.png"  class="img-responsive" style="width: 70%"/>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!--================End Service Area =================-->
+
+        <!--================Instagram Area =================-->
+        <section class="instagram_area">
+        	<div class="container box_1620">
+        		<div class="insta_btn">
+        			<!-- <a class="btn theme_btn" href="#">Follow us on instagram</a>-->
+        		</div>
+        		<div class="instagram_image row m0">
+        			<a href="#"><img src="img/instagram/ins-1.jpg" alt=""></a>
+        			<a href="#"><img src="img/instagram/ins-2.jpg" alt=""></a>
+        			<a href="#"><img src="img/instagram/ins-3.jpg" alt=""></a>
+        			<a href="#"><img src="img/instagram/ins-4.jpg" alt=""></a>
+        			<a href="#"><img src="img/instagram/ins-5.jpg" alt=""></a>
+        			<a href="#"><img src="img/instagram/ins-6.jpg" alt=""></a>
+        		</div>
+        	</div>
+        </section>
+        <!--================End Instagram Area =================-->
+
+        <!--================Footer Area =================-->
+        <footer class="footer_area" id="contact">
+        	<div class="container">
+        		<div class="row footer_inner">
+        			<div class="col-lg-12 col-sm-12 text-center">
+                <img src="img/logo.png" style="margin:15px;"/>
+                <h4 style="color:#fff;">info@photographyclub.in | +91	7676123545</h4>
+        				<aside class="f_widget ab_widget">
+        					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | The Photography Club</a><br> <span> <a href="#"><i class="fa fa-facebook"></i></a>  |  <a href="#"><i class="fa fa-twitter"></i></a>
+    |  <a href="#"><i class="fa fa-dribbble"></i></a>  |  <a href="#"><i class="fa fa-behance"></i></a><span>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+</p>
+        				</aside>
+        			</div>
+        		</div>
+        	</div>
+        </footer>
+        <!--================End Footer Area =================-->
+
+
+
+
+
+
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="js/jquery-3.3.1.min.js"></script>
+        <script src="js/popper.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/stellar.js"></script>
+        <script src="vendors/lightbox/simpleLightbox.min.js"></script>
+        <script src="vendors/nice-select/js/jquery.nice-select.min.js"></script>
+        <script src="vendors/isotope/imagesloaded.pkgd.min.js"></script>
+        <script src="vendors/isotope/isotope.pkgd.min.js"></script>
+        <script src="vendors/owl-carousel/owl.carousel.min.js"></script>
+        <script src="vendors/popup/jquery.magnific-popup.min.js"></script>
+        <script src="js/jquery.ajaxchimp.min.js"></script>
+        <script src="vendors/counter-up/jquery.waypoints.min.js"></script>
+        <script src="vendors/counter-up/jquery.counterup.js"></script>
+        <script src="js/mail-script.js"></script>
+        <script src="js/theme.js"></script>
+    </body>
+</html>
