--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <!-- main css -->
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+
     </head>
     <body>
 
@@ -27,7 +29,7 @@
             	<nav class="navbar navbar-expand-lg navbar-light">
 					<div class="container">
 						<!-- Brand and toggle get grouped for better mobile display -->
-						<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+						<a class="navbar-brand logo_h  wow bounceInUp" href="index.html"><img src="img/logo.png" alt=""></a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
@@ -36,11 +38,11 @@
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto">
-								<li class="nav-item active"><a class="nav-link" href="index.html?#home">Home</a></li>
-								<li class="nav-item"><a class="nav-link" href="index.html?#services">Services</a></li>
-								<li class="nav-item"><a class="nav-link" href="index.html?#values">Values</a></li>
-								<li class="nav-item"><a class="nav-link" href="index.html?#process">Process</a></li>
-								<li class="nav-item"><a class="nav-link" href="index.html?#contact">Contact Us</a></li>
+								<li class="nav-item active wow bounceInLeft"><a class="nav-link" href="index.html?#home">Home</a></li>
+								<li class="nav-item wow bounceInLeft"><a class="nav-link" href="index.html?#services">Services</a></li>
+								<li class="nav-item wow bounceInLeft"><a class="nav-link" href="index.html?#values">Values</a></li>
+								<li class="nav-item wow bounceInLeft"><a class="nav-link" href="index.html?#process">Process</a></li>
+								<li class="nav-item wow bounceInLeft"><a class="nav-link" href="index.html?#contact">Contact Us</a></li>
 
 							</ul>
 						</div>
@@ -55,7 +57,7 @@
            	<div class="box_1620">
            		<div class="banner_inner d-flex align-items-center">
 					<div class="container">
-						<div class="banner_content text-center">
+						<div class="banner_content text-center wow zoomIn">
 							<h4 style="font-size: 50px;">“Don’t shoot what it looks like.<br /> Shoot what it feels like.”</h4>
 							<p>― David Alan Harvey -</p>
 							<!-- <a class="main_btn" href="#">Explore Gallery</a> -->
@@ -73,12 +75,12 @@
         			<div class="row h_blog_item">
         				<div class="col-lg-6">
 							<div class="h_blog_img">
-								<img class="img-fluid" src="img/home-blog/h-blog-1.jpg" alt="">
+								<img class="img-fluid wow jello" src="img/home-blog/h-blog-1.jpg" alt="">
 							</div>
 						</div>
 						<div class="col-lg-6">
 							<div class="h_blog_text">
-								<div class="h_blog_text_inner left">
+								<div class="h_blog_text_inner wow bounceInRight">
 									<h4>Capturing	the	Best <br />Feelings	of Life</h4>
 									<p>We	capture	the	most precious moments	of your life and make you	relive	the	feeling</p>
 								</div>
@@ -88,7 +90,7 @@
         			<div class="row h_blog_item">
 						<div class="col-lg-6">
 							<div class="h_blog_text">
-								<div class="h_blog_text_inner right">
+								<div class="h_blog_text_inner right wow bounceInLeft">
 									<h4>Capturing <br />the	Best	of	Entertainment</h4>
 									<p>We	use	high	tech	cameras	to	capture	every	frame	of	the	event	and	make	the	audience	live	the	moment</p>
 								</div>
@@ -96,7 +98,7 @@
 						</div>
 						<div class="col-lg-6">
 							<div class="h_blog_img">
-								<img class="img-fluid" src="img/home-blog/h-blog-2.jpg" alt="">
+								<img class="img-fluid wow jello" src="img/home-blog/h-blog-2.jpg" alt="">
 							</div>
 						</div>
         			</div>
@@ -109,95 +111,95 @@
         <!--================Service Area =================-->
         <section class="service_area p_120" id="services">
         	<div class="container box_1620">
-        		<div class="main_title">
+        		<div class="main_title wow zoomIn">
         			<h2>Services Offered by Us</h2>
         			<p></p>
         		</div>
         		<div class="row m0 service_inner">
-              <div class="col-lg-3 col-md-6 p0">
+              <div class="col-lg-3 col-md-6 p0 wow fadeInDown">
         				<div class="service_img">
         					<img class="img-fluid" src="img/service/service-1.jpg" alt="">
         				</div>
         			</div>
-        			<div class="col-lg-3 col-md-6 p0">
+        			<div class="col-lg-3 col-md-6 p0 wow fadeInDown">
         				<div class="service_text">
         					<h4>Wedding <br />Photography</h4>
         					<p>We capture the most precious moments of your life and make you relive the feeling</p>
         				</div>
         			</div>
-        			<div class="col-lg-3 col-md-6 p0">
+        			<div class="col-lg-3 col-md-6 p0 wow fadeInDown">
         				<div class="service_img">
         					<img class="img-fluid" src="img/service/service-2.jpg" alt="">
         				</div>
         			</div>
-        			<div class="col-lg-3 col-md-6 p0">
+        			<div class="col-lg-3 col-md-6 p0 wow fadeInDown">
         				<div class="service_text">
         					<h4>New	Born Baby<br />Photography</h4>
         					<p>We know what it is to feel the first touch of your baby. We capture your feelings not just moments</p>
         				</div>
         			</div>
-        			<div class="col-lg-3 col-md-6 p0">
+        			<div class="col-lg-3 col-md-6 p0 wow fadeInDown">
         				<div class="service_text">
         					<h4>Birthday/Anniversary <br />Photography</h4>
         					<p>Capture	every	year	of	your	baby	or	journey	 of	your	married	life	and	relive	the	moments	 and	feelings	years	after</p>
         				</div>
         			</div>
-        			<div class="col-lg-3 col-md-6 p0">
+        			<div class="col-lg-3 col-md-6 p0 wow fadeInDown">
         				<div class="service_img">
         					<img class="img-fluid" src="img/service/service-3.jpg" alt="">
         				</div>
         			</div>
-        			<div class="col-lg-3 col-md-6 p0">
+        			<div class="col-lg-3 col-md-6 p0 wow fadeInDown">
         				<div class="service_text">
         					<h4>Sports Event<br />Coverage</h4>
         					<p>We	use	high	tech	cameras	to	capture	every	frame	of	the	event	and	make	the	audience	live	the	moment</p>
         				</div>
         			</div>
-        			<div class="col-lg-3 col-md-6 p0">
+        			<div class="col-lg-3 col-md-6 p0 wow fadeInDown">
         				<div class="service_img">
         					<img class="img-fluid" src="img/service/service-4.jpg" alt="">
         				</div>
         			</div>
-              <div class="col-lg-3 col-md-6 p0">
+              <div class="col-lg-3 col-md-6 p0 wow fadeInUp">
         				<div class="service_img">
         					<img class="img-fluid" src="img/service/service-5.jpg" alt="">
         				</div>
         			</div>
-        			<div class="col-lg-3 col-md-6 p0">
+        			<div class="col-lg-3 col-md-6 p0 wow fadeInUp">
         				<div class="service_text">
         					<h4>Corporate	Event<br />Coverage</h4>
         					<p>Impressing	your	clients	and	customers	by capturing	the	best from your corporate	events</p>
         				</div>
         			</div>
-        			<div class="col-lg-3 col-md-6 p0">
+        			<div class="col-lg-3 col-md-6 p0 wow fadeInUp">
         				<div class="service_img">
         					<img class="img-fluid" src="img/service/service-6.jpg" alt="">
         				</div>
         			</div>
-        			<div class="col-lg-3 col-md-6 p0">
+        			<div class="col-lg-3 col-md-6 p0 wow fadeInUp">
         				<div class="service_text">
         					<h4>Concert/	Stage	<br />events</h4>
         					<p>We use high tech cameras to capture every angel and corner of the event to give you the same feel</p>
         				</div>
         			</div>
-        			<div class="col-lg-3 col-md-6 p0">
+        			<div class="col-lg-3 col-md-6 p0 wow fadeInUp">
         				<div class="service_text">
         					<h4>Fashion <br />Photoshoot</h4>
         					<p>Taking your business to the next level with the best photography experience. Showing what your customers love</p>
         				</div>
         			</div>
-        			<div class="col-lg-3 col-md-6 p0">
+        			<div class="col-lg-3 col-md-6 p0 wow fadeInUp">
         				<div class="service_img">
         					<img class="img-fluid" src="img/service/service-7.jpg" alt="">
         				</div>
         			</div>
-        			<div class="col-lg-3 col-md-6 p0">
+        			<div class="col-lg-3 col-md-6 p0 wow fadeInUp">
         				<div class="service_text">
         					<h4>Product<br />Photoshoot</h4>
         					<p>Take your product direct to your customer’s heart by capturing the best of the product</p>
         				</div>
         			</div>
-        			<div class="col-lg-3 col-md-6 p0">
+        			<div class="col-lg-3 col-md-6 p0 wow fadeInUp">
         				<div class="service_img">
         					<img class="img-fluid" src="img/service/service-8.jpg" alt="">
         				</div>
@@ -210,30 +212,30 @@
         <!--================Service Area =================-->
         <section class="service_area p_120" id="values">
         	<div class="container box_1620" style="text-align:center;">
-        		<div class="main_title">
+        		<div class="main_title wow zoomIn">
         			<h2>Our Core Values</h2>
         			<p></p>
         		</div>
-        		<div class="row m0 service_inner">
+        		<div class="row m0 service_inner  wow bounceInLeft">
               <div class="col-lg-3 col-md-6 p0">
         				<div class="service_text">
                   <img src="img/core-1.png" />
         					<h4>QUALITY</h4>
         				</div>
         			</div>
-        			<div class="col-lg-3 col-md-6 p0">
+        			<div class="col-lg-3 col-md-6 p0 wow bounceInLeft">
         				<div class="service_text">
                     <img src="img/core-2.png" />
         					<h4>RELIABILITY</h4>
         				</div>
         			</div>
-        			<div class="col-lg-3 col-md-6 p0">
+        			<div class="col-lg-3 col-md-6 p0 wow bounceInLeft">
         				<div class="service_text">
                     <img src="img/core-3.png" />
         					<h4>AVAILABILITY</h4>
         				</div>
         			</div>
-        			<div class="col-lg-3 col-md-6 p0">
+        			<div class="col-lg-3 col-md-6 p0 wow bounceInLeft">
         				<div class="service_text">
                     <img src="img/core-4.png" />
         					<h4>COMMITMENT</h4>
@@ -251,22 +253,22 @@
         			<div class="row">
         				<div class="col-lg-12">
         					<div class="feedback_text">
-                    <h3>OUR	PROCESS</h3>
-        						<p>HOW DO WE DO IT SO PERFECT?</p>
+                    <h3 class="wow zoomIn">OUR	PROCESS</h3>
+        						<p class="wow zoomIn">HOW DO WE DO IT SO PERFECT?</p>
                       <div class="col-lg-12" >
-                          <div class="media-body col-md-12">
+                          <div class="media-body col-md-12 wow bounceInRight">
                             <h4>PREPARE</h4>
                             <p>Event specialist will be assigned to collect all the details and particulars about the event. Client requirement checklist will be prepared at this stage.</p>
                           </div>
-                          <div class="media-body  col-md-12">
+                          <div class="media-body  col-md-12 wow bounceInRight">
                             <h4>ASSIGN</h4>
                             <p>Our event specialist will prepare the technical requirement, budget and other planning. According to the requirement Photographer/s will be assigned</p>
                           </div>
-                          <div class="media-body  col-md-12">
+                          <div class="media-body  col-md-12 wow bounceInRight">
                             <h4>PERFORM</h4>
                             <p>Specialist will provide checklist to the team. Assigned team will complete the project as per the requirement and will ensure the checklist criteria's are met</p>
                           </div>
-                          <div class="media-body  col-md-12">
+                          <div class="media-body  col-md-12 wow bounceInRight">
                             <h4>CLOSE</h4>
                             <p>Our editing and mixing team will collect the raw data. Project will be edited and finished as per requirement. Finished project files will be made available on our platform to clients</p>
                           </div>
@@ -284,14 +286,14 @@
         <!--================Service Area =================-->
         <section class="service_area p_120">
           <div class="container box_1620" style="text-align:center;">
-            <div class="main_title">
+            <div class="main_title wow zoomIn">
               <h2>Value Addition to Customers</h2>
               <p></p>
             </div>
             <div class="row m0 ">
               <div class="col-lg-12 col-md-12 p0">
                 <div class="service_text">
-                  <img src="img/Value.png"  class="img-responsive" style="width: 70%"/>
+                  <img src="img/Value.png"  class="img-responsive wow zoomIn" style="width: 70%"/>
                 </div>
               </div>
             </div>
@@ -305,13 +307,13 @@
             <div class="feedback_inner p_100">
               <div class="row">
                 <div class="col-lg-5">
-                  <div class="feedback_text">
+                  <div class="feedback_text wow zoomIn">
                     <h3>OUR	AFFILIATION - CERTIFICATION</h3>
                   </div>
                 </div>
                 <div class="col-lg-7">
               <div class="testi_slider_inner">
-                <div class="testi_slider owl-carousel">
+                <div class="testi_slider owl-carousel wow zoomIn">
                   <div class="item">
                     <div class="media">
                       <div class="d-flex">
@@ -336,14 +338,14 @@
         <!--================Service Area =================-->
         <section class="service_area p_120">
           <div class="container box_1620" style="text-align:center;">
-            <div class="main_title">
+            <div class="main_title wow zoomIn">
               <h2>OUR	GLOBAL PRESENCE</h2>
               <p></p>
             </div>
             <div class="row m0 ">
               <div class="col-lg-12 col-md-12 p0">
                 <div class="service_text">
-                  <img src="img/global.png"  class="img-responsive" style="width: 70%"/>
+                  <img src="img/global.png"  class="img-responsive wow zoomIn" style="width: 70%"/>
                 </div>
               </div>
             </div>
@@ -357,7 +359,7 @@
         		<div class="insta_btn">
         			<!-- <a class="btn theme_btn" href="#">Follow us on instagram</a>-->
         		</div>
-        		<div class="instagram_image row m0">
+        		<div class="instagram_image row m0 wow swing">
         			<a href="#"><img src="img/instagram/ins-1.jpg" alt=""></a>
         			<a href="#"><img src="img/instagram/ins-2.jpg" alt=""></a>
         			<a href="#"><img src="img/instagram/ins-3.jpg" alt=""></a>
@@ -397,6 +399,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="js/jquery-3.3.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
+              <script>
+              new WOW().init();
+              </script>
         <script src="js/popper.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/stellar.js"></script>
