--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     </head>
     <body>
@@ -257,19 +258,19 @@
         						<p class="wow zoomIn">HOW DO WE DO IT SO PERFECT?</p>
                       <div class="col-lg-12" >
                           <div class="media-body col-md-12 wow bounceInRight">
-                            <h4>PREPARE</h4>
+                            <h4><i class="fa fa-eercast" aria-hidden="true"></i> PREPARE</h4>
                             <p>Event specialist will be assigned to collect all the details and particulars about the event. Client requirement checklist will be prepared at this stage.</p>
                           </div>
                           <div class="media-body  col-md-12 wow bounceInRight">
-                            <h4>ASSIGN</h4>
+                            <h4><i class="fa fa-eercast" aria-hidden="true"></i> ASSIGN</h4>
                             <p>Our event specialist will prepare the technical requirement, budget and other planning. According to the requirement Photographer/s will be assigned</p>
                           </div>
                           <div class="media-body  col-md-12 wow bounceInRight">
-                            <h4>PERFORM</h4>
+                            <h4><i class="fa fa-eercast" aria-hidden="true"></i> PERFORM</h4>
                             <p>Specialist will provide checklist to the team. Assigned team will complete the project as per the requirement and will ensure the checklist criteria's are met</p>
                           </div>
                           <div class="media-body  col-md-12 wow bounceInRight">
-                            <h4>CLOSE</h4>
+                            <h4><i class="fa fa-eercast" aria-hidden="true"></i> CLOSE</h4>
                             <p>Our editing and mixing team will collect the raw data. Project will be edited and finished as per requirement. Finished project files will be made available on our platform to clients</p>
                           </div>
                       </div>
@@ -284,7 +285,7 @@
 
 
         <!--================Service Area =================-->
-        <section class="service_area p_120">
+        <!-- <section class="service_area p_120">
           <div class="container box_1620" style="text-align:center;">
             <div class="main_title wow zoomIn">
               <h2>Value Addition to Customers</h2>
@@ -295,6 +296,25 @@
                 <div class="service_text">
                   <img src="img/Value.png"  class="img-responsive wow zoomIn" style="width: 70%"/>
                 </div>
+              </div>
+            </div>
+          </div>
+        </section> -->
+        <!--================End Service Area =================-->
+
+
+        <!--================Service Area =================-->
+        <section class="service_area p_120">
+          <div class="container box_1620" style="text-align:center;">
+            <div class="main_title wow zoomIn">
+              <h2>Value Addition to Customers</h2>
+              <p></p>
+            </div>
+            <div class="row m0 ">
+              <div class="col-lg-12 col-md-12 p0">
+                <img class="img-responsive wow zoomIn" src="img/p1.png" /><br>
+                <img class="img-responsive wow zoomIn" style="    width: 100%;" src="img/p2.png" /><br>
+                <img class="img-responsive wow zoomIn" src="img/p3.png" /><br>
               </div>
             </div>
           </div>
