--- a/index.html
+++ b/index.html
@@ -373,6 +373,39 @@
         </section>
         <!--================End Service Area =================-->
 
+        <section class="contact_area p_120" id="contact">
+            <div class="container">
+                <div class="main_title wow zoomIn">
+                  <h2>Contact Us</h2>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <form class="row contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name">
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control" id="email" name="email" placeholder="Enter email address">
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" id="subject" name="subject" placeholder="Enter Subject">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <textarea class="form-control" name="message" id="message" rows="1" placeholder="Enter Message"></textarea>
+                                </div>
+                            </div>
+                            <div class="col-md-12 text-right">
+                                <button type="submit" value="submit" class="btn submit_btn">Send Message</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!--================Instagram Area =================-->
         <section class="instagram_area">
         	<div class="container box_1620">
@@ -392,7 +425,7 @@
         <!--================End Instagram Area =================-->
 
         <!--================Footer Area =================-->
-        <footer class="footer_area" id="contact">
+        <footer class="footer_area" >
         	<div class="container">
         		<div class="row footer_inner">
         			<div class="col-lg-12 col-sm-12 text-center">
